<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/add_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/backgroundMain"
                    app:srcCompat="@drawable/ic_add_close"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <ImageButton
                android:id="@+id/add_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundMain"
                app:srcCompat="@drawable/ic_add_check"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textSize="21sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/add_background">
                <ImageView
                    android:id="@+id/add_image_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_main_hashtag"
                    app:tint="@color/black" />
            </LinearLayout>
            <EditText
                android:id="@+id/add_title_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/add_background_border"
                android:textColor="@color/black"
                android:textColorHint="@color/textGray"
                android:hint="@string/add_title_task"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <EditText
            android:id="@+id/add_desc_task"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_background_border"
            android:textColor="@color/black"
            android:textColorHint="@color/textGray"
            android:hint="@string/add_desc_task"
            android:inputType="text"
            android:textSize="14sp"
            android:paddingBottom="60dp"
            tools:ignore="TouchTargetSizeCheck" />
        
        <LinearLayout
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_background_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_calendar" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/add_date_task" />
            <TextView
                android:id="@+id/datePickerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textGray"
                android:text="12.06.23" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_time_task_title"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textGray"
            android:textSize="13sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/timeStartPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="6dp"
                android:background="@drawable/add_background_border"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_clock" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/add_time_task_start" />
                <TextView
                    android:id="@+id/timeStartPickerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/textGray"
                    android:text="15:10" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/timeEndPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/add_background_border"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_clock" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/add_time_task_end" />
                <TextView
                    android:id="@+id/timeEndPickerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/textGray"
                    android:text="15:30" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_color_task"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textGray"
            android:textSize="13sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <RadioButton
                    android:id="@+id/radio_blue"
                    android:background="@drawable/add_button"
                    android:backgroundTint="@color/blue"
                    android:button="@drawable/add_button"
                    android:tag="blue"
                    android:textAlignment="center"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="15dp" />
                <RadioButton
                    android:id="@+id/radio_green"
                    android:background="@drawable/add_button"
                    android:backgroundTint="@color/green"
                    android:button="@drawable/add_button"
                    android:tag="green"
                    android:textAlignment="center"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="15dp" />
                <RadioButton
                    android:id="@+id/radio_yellow"
                    android:background="@drawable/add_button"
                    android:backgroundTint="@color/yellow"
                    android:button="@drawable/add_button"
                    android:tag="yellow"
                    android:textAlignment="center"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="15dp" />
                <RadioButton
                    android:id="@+id/radio_purple"
                    android:background="@drawable/add_button"
                    android:backgroundTint="@color/purple"
                    android:button="@drawable/add_button"
                    android:tag="purple"
                    android:textAlignment="center"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="15dp" />
                <RadioButton
                    android:id="@+id/radio_pink"
                    android:background="@drawable/add_button"
                    android:backgroundTint="@color/pink"
                    android:button="@drawable/add_button"
                    android:tag="pink"
                    android:textAlignment="center"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="15dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminderPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_background_border"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_bell" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/add_reminder_task" />
            <TextView
                android:id="@+id/reminderPickerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textGray"
                android:text="Нет" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeatPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_background_border"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_repeat" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/add_repeat_task" />
            <TextView
                android:id="@+id/repeatPickerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/textGray"
                android:text="Нет" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_background"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_clip" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/add_image_task" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_plus" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
